discussion/kv_engine/154315/154315_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38476: wip

Need to fix the shared_ptr vs weak_ptr in the registry/ownership
stuff.

Change-Id: I561fca35ef4a54f47667f69395cb0e050f23cc6d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-05-26 09:47:09.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-26 09:48:17.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9158/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.cc:39:31: error: no member named "payload" in "spdlog::details::log_msg" [clang-diagnostic-error]
    std::string msgString(msg.payload.begin(), msg.payload.end());
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.cc:39:52: error: no member named "payload" in "spdlog::details::log_msg" [clang-diagnostic-error]
    std::string msgString(msg.payload.begin(), msg.payload.end());
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:179:56: error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
    void sink_it_(const spdlog::details::log_msg& msg) override;
                                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/third_party/spdlog/include/spdlog/logger.h:134:18: note: hidden overloaded virtual function "spdlog::logger::sink_it_" declared here: type mismatch at 1st parameter ("details::log_msg &" vs "const spdlog::details::log_msg &")
    virtual void sink_it_(details::log_msg &msg);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/objectregistry_test.cc:137:46: error: no member named "payload" in "spdlog::details::async_msg" [clang-diagnostic-error]
    const auto asyncMsgCapacity = sizeof(msg.payload) / 2;
                                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/logger/custom_rotating_file_sink.h:27:10: error: "spdlog/pattern_formatter.h" file not found [clang-diagnostic-error]
#include <spdlog/pattern_formatter.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9158/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.cc:39:31:
error: no member named "payload" in "spdlog::details::log_msg" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9158/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7729/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
